books-service/deployment-files/books-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: books-service
  template:
    metadata:
      labels:
        app: books-service
    spec:
      containers:
      - name: books-svc
        image: sagardev/books:1.0
        ports:
        - containerPort: 3000
