books-service/deployment-files/books-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: books-service
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 3000
  selector:
    app: books-service
